Allow different locations per product in stock (closes #124) Kind of basic for now, a different location can be set on purchase, the filters on the stock overview page handles different locations
